--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,8 +25,8 @@ jobs:
       run: |
         pip install -r requirements.txt
         
-        user='${{ secrets.USER }}'
-        pwd='${{ secrets.PWD }}'
+        user='${{ PWD.USER }}'
+        pwd='${{ PWD.PWD }}'
         
         user_list=()
         pwd_list=()
